--- a/en-US/6.manage/5.security-and-permissions/1.security-permissions.md
+++ b/en-US/6.manage/5.security-and-permissions/1.security-permissions.md
@@ -4,7 +4,7 @@ Security is one of the top priorities for a database. A database management syst
 
 As the final data carrier, OceanBase Database prioritizes data security. OceanBase Database provides a full range of enterprise-level security features to ensure data security. The security features include identity authentication, access control, data encryption, monitoring and alerts, and AuditTrail. 
 
-![Security](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/7373623461/p358111.jpg)
+<!-- ![Security](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/7373623461/p358111.jpg) -->
 
 * Identity authentication
 
