--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/4.restart-observer.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/4.restart-observer.md
@@ -40,7 +40,7 @@ To restart a node in OCP, perform the following steps:
 
 3. In the **OBServers** list, click **Restart** in the **Actions** column of the OBServer node that you want to restart.
 
-   ![09161753](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9060562361/p327394.png)
+   <!-- ![09161753](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9060562361/p327394.png) -->
 
 4. In the dialog box that appears, select whether to force restart the node.
 
@@ -56,6 +56,6 @@ To restart a node in OCP, perform the following steps:
 
    When the task status is **Completed**, and the status of the node is **Running** in the **OBServers** list on the **Overview** page, the node is restarted.
 
-## References
+## More information
 
 [Stop or start a node](../5.manage-observer/3.stop-or-start-observer.md)
