--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/7.cluster-tenant-management-overview.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/7.cluster-tenant-management-overview.md
@@ -124,19 +124,19 @@ You have full privileges on the cluster and management privileges on its tenants
 
       The resource distribution information includes the CPU utilization, memory usage, and disk usage of each tenant in percentage, as well as the remaining CPU, memory, and disk resources of the system in percentage.
 
-      ![Image 9.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/tenant-management.png)
+      <!-- ![Image 9.png](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/tenant-management.png) -->
 
       When you move the pointer over the pie chart, the system displays the resource usage of the tenant.
 
    * In the **Tenants** section, you can view the basic information of all tenants, such as the tenant name, tenant mode, zone priority, and status.
 
-      ![16](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E7%A7%9F%E6%88%B7id1.png)
+      <!-- ![16](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E7%A7%9F%E6%88%B7id1.png) -->
 
    * In the **Top 5 Tenants** section, you can view the performance metrics of the top 5 tenants by workload, such as the TPS, QPS, SQL response time, transaction response time, number of active sessions, number of waits, wait time, capacity_number of tables, and capacity_number of partitions.
 
       You can also view the monitoring information during the last hour, day, or week as needed.
 
-      ![18](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4772988061/p200735.png)
+      <!-- ![18](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4772988061/p200735.png) -->
 
       The following table describes the performance monitoring metrics.
 
