--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.tenant-performance-monitoring.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/14.tenant-performance-monitoring.md
@@ -23,7 +23,7 @@ You can view the performance metrics of a tenant in the OceanBase Cloud Platform
    | Zone | Select the zone that you want to view.  |
    | OBServer node | Select the OBServer node that you want to view.  |
 
-   ![06091755](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/tenent-performance.png)
+   <!-- ![06091755](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/tenent-performance.png) -->
 
 6. Click the **Performance & SQL**, **Transaction**, and **Storage and Cache** tabs to view different performance monitoring data.
 
@@ -33,4 +33,4 @@ You can view the performance metrics of a tenant in the OceanBase Cloud Platform
 
    * Click the **Storage and Cache** tab to view the performance data related to storage and caching, including the MemStore, IOPS, I/O time, I/O throughput, cache size, cache hit rate, and number of cache requests.
 
-   For more information, see [Tenant performance monitoring](https://www.oceanbase.com/docs/enterprise-oceanbase-ocp-cn-10000000000775968) in the OCP User Guide of the corresponding version.
+   For more information, see [Tenant performance monitoring](https://en.oceanbase.com/docs/community-ocp-en-10000000000840303) in the OCP User Guide of the corresponding version.
