--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.replication-tenant.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/5.replication-tenant.md
@@ -16,7 +16,7 @@ You are granted the system administrator or OCP tenant administrator role or ano
 
 3. In the **Tenants** list, find the tenant that you want to copy and click **Copy** in the **Actions** column.
 
-   ![Copy a tenant](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/copy-tenant.png)
+   <!-- ![Copy a tenant](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/copy-tenant.png) -->
 
 4. On the **Copy Tenant** page, configure zone information and other basic information.
 
