--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/8.management-process/2.multi-tenant-oceanbase-threads.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/8.management-process/2.multi-tenant-oceanbase-threads.md
@@ -20,9 +20,9 @@ When an OBServer node receives an SQL request of the online transaction processi
 
 5. The TNT_1014 thread returns the execution results and the return value to the client.
 
-The following figure shows how a multi-tenant thread of OceanBase Database processes a local OLTP SQL request.
+<!-- The following figure shows how a multi-tenant thread of OceanBase Database processes a local OLTP SQL request.
 
-![Multi-tenant thread_1_SQL request 1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1120089261/p311713.gif)
+![Multi-tenant thread_1_SQL request 1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1120089261/p311713.gif) -->
 
 ### Scenario 2
 
@@ -38,9 +38,9 @@ When an OBServer node receives a remote procedure call (RPC) request, such as a 
 
 5. The TNT_1011 thread returns the execution results and the return value to the remote OBServer node.
 
-The following figure shows how a multi-tenant thread of OceanBase Database processes a distributed SQL RPC request.
+<!-- The following figure shows how a multi-tenant thread of OceanBase Database processes a distributed SQL RPC request.
 
-![Multi-tenant thread_2_rpc](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2960089261/p311716.gif)
+![Multi-tenant thread_2_rpc](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2960089261/p311716.gif) -->
 
 ### Scenario 3
 
@@ -56,9 +56,9 @@ When an OBServer node receives a PX SQL request that is sent from a client to Te
 
 5. After Request 1 is executed, the thread returns the execution results and the return value to the client.
 
-The following figure shows how a multi-tenant thread of OceanBase Database processes a local PX SQL request.
+<!-- The following figure shows how a multi-tenant thread of OceanBase Database processes a local PX SQL request.
 
-![19](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4864220461/p361284.gif)
+![19](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4864220461/p361284.gif) -->
 
 ## Related parameters
 
