--- a/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/2.monitoring/1.status-monitoring.md
+++ b/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/2.monitoring/1.status-monitoring.md
@@ -18,9 +18,9 @@ Before you log on, make sure that you have read-only permissions or management p
 
    * Top 5 Clusters by QPS
 
-      Displays the top 5 clusters sorted by a specified performance metric in descending order in a specified time range. You can specify the performance metric and the time range as needed. You can click the More icon in the upper-right corner to zoom in the chart for a better view.
+      Displays the top 5 clusters sorted by a specified performance metric in descending order in a specified time range. You can specify the performance metric and the time range as needed. You can click the **More** icon in the upper-right corner to zoom in the chart for a better view.
 
-      ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2965260261/p264657.png)
+      <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2965260261/p264657.png) -->
 
       The available performance metrics are **QPS (times/s)**, **Query Response Time (us)**, **Active Sessions**, and **CPU Utilization (%)**.
 
@@ -37,21 +37,21 @@ Before you log on, make sure that you have read-only permissions or management p
 
       Displays a bar chart of five clusters with the longest major compaction time in the last three days. A major compaction merges all dynamic and static data, which is time-consuming. When the incremental data generated in minor compactions reaches the specified threshold, OceanBase Database performs a major compaction on data of the same major version.
 
-      This section is empty if no major compaction has been performed in the last three days. You can click the More icon in the upper-right corner to zoom in the chart for a better view.
+      This section is empty if no major compaction has been performed in the last three days. You can click the **More** icon in the upper-right corner to zoom in the chart for a better view.
 
-      ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2965260261/p264757.png)
+      <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2965260261/p264757.png) -->
 
    * Server Resources
 
       Displays information about each IDC, including the IDC name, total number of servers, and number of servers where OBServer nodes are deployed. You can determine whether it is necessary to perform a cluster scale-out based on such information.
 
-      ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2965260261/p264760.png)
+      <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2965260261/p264760.png) -->
 
    * Resource Usage
 
       Displays resource usage information of each cluster, including the cluster name, number of tenants, allocated CPU resources in percentage, allocated memory in percentage, and occupied disk space. You can sort clusters by the allocated CPU resources, allocated memory, and occupied disk space.
 
-      ![07021646](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6765745261/p291083.png)
+      <!-- ![07021646](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6765745261/p291083.png) -->
 
       Click a cluster name to view details of the cluster on the displayed page. For more information, see OCP User Guide.
 
@@ -89,13 +89,13 @@ Before you log on, make sure that you have read-only permissions or management p
    
          The **Resource Usage** section displays the resource allocation information of the current cluster. You can manage the cluster based on resource usage.
    
-         ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/resource-used.png)
+         <!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/resource-used.png) -->
    
       * **Alert Overview**
    
          The **Alert Overview** section displays the alerts in the system by alert levels, including **Stopped**, **Critical**, **Warning**, **Caution**, and **Reminder**. You can click **Last 24 Hours**, **Last 7 Days**, or **Last 30 Days** to view alerts in the specified time range. You can click the digit after an alert level to view the alert details.
    
-         ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9956530261/p264934.png)
+         <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/9956530261/p264934.png) -->
    
       * **System Events in Last 7 Days**
    
@@ -109,16 +109,16 @@ Before you log on, make sure that you have read-only permissions or management p
    
          The system lists the system events that meet the foregoing criteria you specified.
    
-         ![06101753](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6965745261/p282977.png)
+         <!-- ![06101753](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6965745261/p282977.png) -->
    
       * **Zones**
    
          In the Zones section, you can search for zones. The table contains the following columns: **Zone Name**, **Region**, **IDC**, **Servers**, **Root Server**, **Status**, and **Actions**. The **Actions** column provides the following options: **Add OBServer, Restart, Stop**, and **Delete**. For more information, see OCP User Guide.
    
-         ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0066530261/p264941.png)
+         <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0066530261/p264941.png) -->
    
       * **OBServers**
    
          You can view OBServer information in the OBServers list in the following columns: **IP**, **SQL Port**, **RPC Port**, **IDC**, **Zone**, **Host Type**, **Resource Usage**, **Status**, and **Actions**. The **Actions** column provides the following options: **Restart**, **Stop Service**, **Stop Process**, **Replace**, **Delete**, and **Download Logs**. For more information, see OCP User Guide.
    
-         ![09081044](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/observer-list.png)
+         <!-- ![09081044](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/observer-list.png) -->
