--- a/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/1.alarm-configuration.md
+++ b/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/1.alarm-configuration.md
@@ -45,13 +45,13 @@ This topic describes how to configure an alert channel. For more information abo
 
    The fields to be specified vary with the channel type.
 
-   ![p168434](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E9%80%9A%E9%81%93%E5%9F%BA%E6%9C%AC%E4%BF%A1%E6%81%AF1.png)
+   <!-- ![p168434](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E9%80%9A%E9%81%93%E5%9F%BA%E6%9C%AC%E4%BF%A1%E6%81%AF1.png) -->
 
 5. When **Channel Type** is set to **HTTP**, **Email**, or **Custom Script**, configure the alert channel as prompted.
 
    For example, when **Channel Type** is set to **HTTP**, the alert channel is configured as follows:
 
-   ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3248190061/p168435.png "image.png")
+   <!-- ![image.png](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3248190061/p168435.png "image.png") -->
 
    | Parameter | Description |
    |-----------|------------------------------|
@@ -62,10 +62,10 @@ This topic describes how to configure an alert channel. For more information abo
    | Body Template | Enter the template for the notification content.  |
    | Response Verification Information | Optional. <ul><li>Responses vary with channels. You must configure the response verification information for OCP to accurately determine whether a message is successfully sent. </li><li>You must enter the response verification information as a JSON string. OCP will parse the fields in the JSON string and match them with the corresponding information in the body of the channel response. If all fields are successfully matched, OCP determines that the alert message is successfully sent. </li><li>If you are not sure of the channel response, you can set it to {}. In this way, OCP will always assume that the messages are successfully sent. </li></ul> |
 
-   ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E9%80%9A%E9%81%93%E9%85%8D%E7%BD%AE%E6%9B%B4%E6%96%B0-1.png)
+   <!-- ![1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E9%80%9A%E9%81%93%E9%85%8D%E7%BD%AE%E6%9B%B4%E6%96%B0-1.png) -->
 
 6. Specify the alert message configurations.
 
-   ! [Alert message configurations](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE-1.png)
+   <!-- ![Alert message configurations](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%B6%88%E6%81%AF%E9%85%8D%E7%BD%AE-1.png) -->
 
 7. Click **Send Test Message**. If the message is sent, click **Submit**.
