--- a/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/4.common-alert-item-management.md
+++ b/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/4.common-alert-item-management.md
@@ -48,7 +48,7 @@ OCP provides a series of built-in alert rules. You can view and edit the built-i
 
    1. Specify alert objects.
 
-      ![Specify alert objects](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E5%AF%B9%E8%B1%A11.png)
+      <!-- ![Specify alert objects](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E5%AF%B9%E8%B1%A11.png) -->
 
    2. Set the operation rule.
 
@@ -57,7 +57,7 @@ OCP provides a series of built-in alert rules. You can view and edit the built-i
       * Single metric: A single operation rule is configured for alert reporting. The threshold and level in a rule cannot overlap with those in another rule. You can configure at most five rules.
       * Multiple metrics: Multiple metrics are suitable for complex alert scenarios. You can configure multi-level `AND` or `OR` metric relationships for an alert rule.
 
-      ![p276978](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%8D%95%E6%8C%87%E6%A0%87%E5%91%8A%E8%AD%A6%E8%A7%84%E5%88%991.png)
+      <!-- ![p276978](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%8D%95%E6%8C%87%E6%A0%87%E5%91%8A%E8%AD%A6%E8%A7%84%E5%88%991.png) -->
 
    3. Specify **Alert Cycle**.
 
@@ -87,7 +87,7 @@ OCP provides six default rule groups: dba, dev, oms, backup, info, and ocp. You 
 
 4. Click the **Create** icon on the right of **Rule Group** list, enter the name of the new group, and press **Enter**.
 
-   ![Create a rule group](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E8%A7%84%E5%88%99%E5%88%86%E7%BB%841.png)
+   <!-- ![Create a rule group](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E8%A7%84%E5%88%99%E5%88%86%E7%BB%841.png) -->
 
 ## Add an alert rule to a rule group
 
@@ -103,4 +103,4 @@ To facilitate alert pushing, you can log on to OCP and add an alert rule to a ru
 
 5. Click **OK**.
 
-   ![p168426](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%B7%BB%E5%8A%A0%E5%88%B0%E5%91%8A%E8%AD%A6%E5%88%86%E7%BB%841.png)
+   <!-- ![p168426](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%B7%BB%E5%8A%A0%E5%88%B0%E5%91%8A%E8%AD%A6%E5%88%86%E7%BB%841.png) -->
