--- a/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/2.histogram-introduction.md
+++ b/en-US/7.reference/3.performance-tuning-guide/5.sql-optimization/4.sql-optimization/4.optimizer-statistics/2.statistics-collection-methods/2.histogram-introduction.md
@@ -30,9 +30,11 @@ A hybrid histogram is set based on a specified amount of data collected. Unlike 
 
 ## Selection of histograms
 
-The OceanBase Database optimizer selects the histogram type according to the values of `NDV`, `bucket_size`, and `p`. The following figure shows the strategy for selecting histograms.
+The OceanBase Database optimizer selects the histogram type according to the values of `NDV`, `bucket_size`, and `p`. 
 
-![Histogram 1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3149703461/p392712.png)
+<!-- The following figure shows the strategy for selecting histograms.
+
+![Histogram 1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3149703461/p392712.png) -->
 
 The metrics are described as follows:
 
