--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/4.date-time-and-interval-data-types-of-oracle-mode/8.calculation-of-date-time-and-interval-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/3.basic-elements-of-oracle-mode/1.built-in-data-types-of-oracle-mode/4.date-time-and-interval-data-types-of-oracle-mode/8.calculation-of-date-time-and-interval-of-oracle-mode.md
@@ -36,7 +36,7 @@ OceanBase calculates DATE and INTERVAL values based on the following rules:
    SELECT TO_DATE("29-FEB-2004", "DD-MON-YYYY") + TO_YMINTERVAL("4-0") FROM DUAL;
    ```
 
-* The following table list the matrix of the datetime arithmetic operations. "—" indicates an unsupported operation.
+<!-- * The following table list the matrix of the datetime arithmetic operations. "—" indicates an unsupported operation.
 
-   ![p179242](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/7110319361/p367602.png)
+   ![p179242](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/7110319361/p367602.png) -->
 
