--- a/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/8.queries-and-subqueries-of-oracle-mode/3.hierarchical-query-of-oracle-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/8.queries-and-subqueries-of-oracle-mode/3.hierarchical-query-of-oracle-mode.md
@@ -72,9 +72,11 @@ INSERT INTO emp VALUES (11,'Manager of Canada region',4);
 INSERT INTO emp VALUES (12,'Manager of Beijing,China region',7);
 ```
 
-In the preceding table, the `position` column has a clear hierarchical relationship. The following figure shows the tree structure.
+In the preceding table, the `position` column has a clear hierarchical relationship. 
 
-![Hierarchical query](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2345220461/p371444.png)
+<!-- The following figure shows the tree structure.
+
+![Hierarchical query](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2345220461/p371444.png) -->
 
 Execute the following statement to present the results in a hierarchical structure:
 
