--- a/en-US/7.reference/7.command-line-tools/3.ecob.md
+++ b/en-US/7.reference/7.command-line-tools/3.ecob.md
@@ -28,6 +28,8 @@ ECOB of the current version provides the following features:
 
 ## Architecture
 
-ECOB comprises the ecob precompiler and the ecoblib library (libecob.so), a runtime dynamic link library. The architecture is shown in the following figure.
+ECOB comprises the ecob precompiler and the ecoblib library (libecob.so), a runtime dynamic link library. 
 
-![Architecture of ECOB](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8238598061/p183960.png)
+<!-- The architecture is shown in the following figure.
+
+![Architecture of ECOB](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8238598061/p183960.png) -->
