--- a/en-US/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
+++ b/en-US/6.manage/3.replica-management/2.replica-distribution/1.locality-overview.md
@@ -18,7 +18,7 @@ The following table describes the parameters in the syntax.
 
 | **Parameter** | **Description** |
 |------------|-----------------------|
-| replicas | The type of the replica. The value of this parameter is the name of the replica type. Both full names and abbreviations are supported. <!-- You can view the supported replica type names in the name column of the table in [About replicas](../1.replica-introduction.md). -->  |
+| replicas | The type of the replica. The value of this parameter is the name of the replica type. Both full names and abbreviations are supported. You can view the supported replica type names in the name column of the table in [About replicas](../1.replica-introduction.md).  |
 | location | The location of the replica. It contains a collection of values that are known to the system. The value of this parameter is the names of zones. You can query for the names of zones in a cluster or tenant from the `oceanbase.DBA_OB_ZONES` view. <br>For more information about the `oceanbase.DBA_OB_ZONES` view, see [oceanbase.DBA_OB_ZONES](../../../7.reference/5.system-reference/4.system-overview-of-mysql-mode/2.dictionary-view-of-mysql-mode/63.oceanbase-dba_ob_zones-of-mysql-mode.md).  |
 | count | If this parameter is not specified, only one replica is available. The value `{n}` indicates n replicas. A partition has at most one full-featured replica in a zone.  |
 
