--- a/en-US/6.manage/6.backup-and-recovery/5.clear-backup-data/5.parameters-of-cleaning-up-backup.md
+++ b/en-US/6.manage/6.backup-and-recovery/5.clear-backup-data/5.parameters-of-cleaning-up-backup.md
@@ -10,9 +10,9 @@ All data backed up earlier than the latest backup data that meets the following 
 
 For example, the setting `recovery_window='7d'` indicates that the data backed up within the last 7 days must be restorable, and the backup data beyond this restore window is considered expired.
 
-The following example shows how to determine whether backup data has expired after you specify `recovery_window`, as shown in the following figure.
+<!-- The following example shows how to determine whether backup data has expired after you specify `recovery_window`, as shown in the following figure.
 
-![Automatic backup cleanup](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/backup_delete_picture.png)
+![Automatic backup cleanup](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/backup_delete_picture.png) -->
 
 When automatic data cleanup is enabled, the system cleans up expired data on the basis of one full backup and multiple incremental backups. As shown in the preceding figure.
 
