--- a/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md
+++ b/en-US/7.reference/2.administrator-guide/1.database-connection-and-routing/7.route-management/4.odp-routing-policy/1.read-write-splitting.md
@@ -15,7 +15,8 @@ With the read/write splitting feature, read requests can be sent to followers to
 To use read/write splitting, you must:
 
 1. Configure weak consistency read for SQL statements. A weak consistency read request does not need to read the latest data. Strong-consistency read is enabled for general SQL statements and weak consistency read requires additional configurations.
-2. Modify the routing strategy. <!-- For example, for partition1 in the following figure, the three replicas including the leader can provide weak consistency read services. You can modify the routing strategy so that read requests are preferentially routed to the followers. -->
+2. Modify the routing strategy. 
+   <!-- For example, for partition1 in the following figure, the three replicas including the leader can provide weak consistency read services. You can modify the routing strategy so that read requests are preferentially routed to the followers. -->
 
 <!-- ![Read/Write splitting](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/read-write-splitting/2023-03-06%2017%2012%2017.png)  -->
 
