--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/10.view-the-resource-information-of-a-cluster.md
@@ -63,7 +63,7 @@ In the Resource Usage Tendency section, you can view the **Disk**, **CPU**, and 
 
 * Click the filter icon in the upper-right corner of each trend chart to view the resource usage of different zones.
 
-![Resource usage tendency](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/cluster-management/resource-distribution.png)
+<!-- ![Resource usage tendency](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/cluster-management/resource-distribution.png) -->
 
 The table in the **Allocated Resources** section has the following columns: **Tenant Name, Used Disks, Allocated CPU (Core)**, and **Allocated Memory (G)**. Click the name of a tenant to go to the overview page of the tenant.
 
@@ -72,7 +72,7 @@ The table in the **Allocated Resources** section has the following columns: **Te
 <p>Due to high query costs, the query results of tenant resource allocation statistics are returned based on cached data. This may result in a 2-minute lag with the real-time condition. In this case, for the allocated resources that do not belong to any tenant, N/A is displayed in the Tenant Name column, indicating that such resources can be released. </p>
 </main>
 
-![19](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/resource-distribution.png)
+<!-- ![19](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.0.0/user-guide/resource-distribution.png) -->
 
 ## References
 
