--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/7.replace-observer.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/5.manage-observer/7.replace-observer.md
@@ -20,7 +20,7 @@ OceanBase Cloud Platform (OCP) allows you to replace a specified node from a clu
 
 3. In the **OBServers** list, click **Replace** in the **Actions** column of the OBserver node that you want to replace.
 
-   ![Replace a node](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/cluster-management/replace-node.png)
+   <!-- ![Replace a node](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/reference/cluster-management/replace-node.png) -->
 
 4. In the dialog box that appears, select a new host and click **Replace**.
 
