--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/8.cluster-performance-monitoring.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/1.manage-clusters/8.cluster-performance-monitoring.md
@@ -21,7 +21,7 @@ OceanBase Cloud Platform (OCP) allows the administrator to view performance metr
    | Zone | Select the zone that you want to view.  |
    | OBServer | Select the OBServer node that you want to view.  |
 
-   ![Monitor cluster performance](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%95%B0%E6%8D%AE%E5%BA%93%E6%80%A7%E8%83%BD1.png)
+   <!-- ![Monitor cluster performance](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%95%B0%E6%8D%AE%E5%BA%93%E6%80%A7%E8%83%BD1.png) -->
 
    * If **Auto Refresh** is disabled, after you specify the filter conditions, the system displays the performance monitoring data based on the specified values of Select Time and Stat Period.
 
