--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/11.view-the-tenant-topology.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/11.view-the-tenant-topology.md
@@ -22,7 +22,7 @@ Click the More icon on the right of the cluster icon to view supported operation
 
 * Click **Modify Zone Priority of Tenant** to modify the zone priority in the dialog box that appears.
 
-![09162028](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3260562361/p327427.png)
+<!-- ![09162028](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3260562361/p327427.png) -->
 
 ## Zone
 
@@ -32,7 +32,7 @@ If a zone contains a tenant replica, the zone icon is displayed in purple with t
 
 * When you move the pointer over a zone icon, a tooltip appears and displays the type of the replica and the number of units in the zone.
 
-   ![09162029](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4260562361/p327431.png)
+   <!-- ![09162029](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4260562361/p327431.png) -->
 
 * Click the More icon on the right of the zone icon to view supported operations.
 
@@ -50,7 +50,7 @@ Click the More icon on the right of the server icon to view supported operations
 
 You can delete a unit. In the dialog box that appears, click **Delete** to delete the unit.
 
-## References
+## More information
 
 * You can check the statuses and other basic information of all zones in the cluster from the `oceanbase.DBA_OB_ZONES` view.
 
