--- a/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/2.monitoring/2.performance-monitoring.md
+++ b/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/2.monitoring/2.performance-monitoring.md
@@ -12,7 +12,7 @@ You can view the historical performance monitoring information of clusters in Oc
 
    You can specify a performance metric and a time range to view the information about the top 5 clusters sorted by the specified performance metric. You can click the More icon in the upper-right corner to zoom in the chart for a better view.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2965260261/p264657.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2965260261/p264657.png) -->
 
    The available performance metrics are **QPS (times/s)**, **Query Response Time (us)**, **Active Sessions**, and **CPU Utilization (%)**.
 
@@ -35,7 +35,7 @@ You can view the historical performance monitoring information of clusters in Oc
 
    You can view the monitoring information for the last 1 hour, the last 24 hours, or the last 7 days. You can click the zoom-in icon in the upper-right corner to zoom in the chart or select a monitoring time range.
 
-   ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1912730261/p265457.png)
+   <!-- ![1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1912730261/p265457.png) -->
 
    The following table describes the performance monitoring metrics.
 
@@ -68,7 +68,7 @@ You can view the historical performance monitoring information of clusters in Oc
 
    * **OBServer**: Select OBServer nodes to view their performance monitoring data.
 
-      ![Performance monitoring for a specific cluster](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%95%B0%E6%8D%AE%E5%BA%93%E6%80%A7%E8%83%BD1.png)
+      <!-- ![Performance monitoring for a specific cluster](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%95%B0%E6%8D%AE%E5%BA%93%E6%80%A7%E8%83%BD1.png) -->
 
 5. You can respectively view the performance data of databases and hosts in the cluster on different tabs.
 
@@ -90,7 +90,7 @@ You can view the performance information of the five tenants with the highest wo
 
    You can view the monitoring information for the last 1 hour, the last 24 hours, or the last 7 days.
 
-   ![Performance monitoring information of all tenants in a specific cluster](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8355280061/p167602.png)
+   <!-- ![Performance monitoring information of all tenants in a specific cluster](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8355280061/p167602.png) -->
 
 ## Performance monitoring information of a specific tenant
 
@@ -112,7 +112,7 @@ You can view the performance information of the five tenants with the highest wo
 
    * **OBServer**: Select OBServer nodes to view their performance monitoring data.
 
-   ![Performance monitoring information of a specific tenant](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/tenent-performance.png)
+   <!-- ![Performance monitoring information of a specific tenant](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/tenent-performance.png) -->
 
 6. On the **Performance & SQL** tab, view the monitoring statistics for the following metrics of the tenant:
 
