--- a/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/2.alert-subscription.md
+++ b/en-US/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/2.alert-subscription.md
@@ -40,11 +40,11 @@ You can receive alert notifications only when the following two conditions are m
 
    * If you select **Alert Template**, all alert templates in the system are displayed on the tab. Select a template. Alert messages will be pushed to all objects in the template.
 
-      ![Alert template-based push](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E6%A8%A1%E6%9D%BF%E6%8E%A8%E9%80%811.png)
+      <!-- ![Alert template-based push](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E6%A8%A1%E6%9D%BF%E6%8E%A8%E9%80%811.png) -->
 
    * If you select **Alert Group**, you can choose to push alert messages to specific objects. If you do not specify objects, the system pushes alert messages based on the group configuration rule and alert object configuration.
 
-      ![Alert group](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/402-cn/%E5%91%8A%E8%AD%A6%E5%88%86%E7%BB%84.png)
+      <!-- ![Alert group](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/402-cn/%E5%91%8A%E8%AD%A6%E5%88%86%E7%BB%84.png) -->
 
 5. Configure the following information in the **Message Push Configuration** section:
 
@@ -53,11 +53,11 @@ You can receive alert notifications only when the following two conditions are m
 
       Select an alert level and specify an alert channel for pushing messages for the selected alert level. If you do not want to receive pushed messages in a specified period of time, set **Send Notifications in Specified Period**. If you do not set this parameter, you will receive pushed messages throughout the day.
 
-      ![Push message configuration 1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%8E%A8%E9%80%81%E6%B6%88%E6%81%AF%E8%AF%AD%E8%A8%801.png)
+      <!-- ![Push message configuration 1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%8E%A8%E9%80%81%E6%B6%88%E6%81%AF%E8%AF%AD%E8%A8%801.png) -->
 
    * Specify whether to enable **Maximum Number of Received Alert Messages**. If you enable this option, the number of alert messages sent through the alert channel is limited. When the number of alert messages reaches the limit, the alert channel no longer pushes alert messages.
 
-      ![Push message configuration 2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E6%B6%88%E6%81%AF%E6%8E%A5%E6%94%B6%E9%99%90%E5%88%B61.png)
+      <!-- ![Push message configuration 2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E6%B6%88%E6%81%AF%E6%8E%A5%E6%94%B6%E9%99%90%E5%88%B61.png) -->
 
    * Specify whether to enable **Recovery Notification**.
 
