--- a/en-US/7.reference/6.oceanbase-tools/4.1.ocp-express.md
+++ b/en-US/7.reference/6.oceanbase-tools/4.1.ocp-express.md
@@ -28,7 +28,8 @@ OCP Express adopts the **Agent-Server** architecture with the following characte
 OCP Express is deeply integrated with the OceanBase cluster. You can download the all-in-one package of OceanBase Database and select OCP Express during deployment. 
 
 * Obtain the all-in-one package of OceanBase Database Enterprise Edition or OceanBase Database Community Edition in [OceanBase Download Center](https://en.oceanbase.com/softwarecenter). 
-* For more information about how to install and deploy OCP Express, see [Deploy OCP Express by using a CLI tool](https://en.oceanbase.com/docs/community-obd-en-10000000000862277)<!--  or [Deploy OCP Express by using OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001690695)  -->.
+* For more information about how to install and deploy OCP Express, see [Deploy OCP Express by using a CLI tool](https://en.oceanbase.com/docs/community-obd-en-10000000000862277).
+  <!--  or [Deploy OCP Express by using OBD](https://www.oceanbase.com/docs/community-obd-cn-10000000001690695)  -->
 
 ### Configuration requirements
 
