400use:OA feedback modification

--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/5.query-by-group-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/5.query-by-group-of-mysql-mode.md
@@ -114,7 +114,7 @@ obclient> SELECT user_id 客户ID, COUNT(order_id) 下单数量 FROM fruit_order
 
 ### 分组后筛选
 
-查询 2019 年订单数量大于 1 的客户，并输出客户 ID 和下单数量。
+查询 2019 年订单数量大于等于 2 的客户，并输出客户 ID 和下单数量。
 
 ```sql
 obclient> SELECT user_id 客户ID, COUNT(order_id) 下单数量 FROM fruit_order t WHERE t.order_year = 2019 GROUP BY user_id HAVING COUNT(order_id)>=2;
