--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/11.connect-to-the-oceanbase-database-through-springjpa-of-mysql-mode.md
@@ -150,10 +150,10 @@ useUnicode=true&characterEncoding=utf-8
       <version>****</version>
   </dependency>
   <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
-   <artifactId>oceanbase-client</artifactId>
-   <version>2.4.0</version>
-  </dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.25</version>
+</dependency>
   <!-- 其余部分略 -->
 ```
 
